--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,9 @@
     border-collapse: collapse;
     border-spacing: 0; }
 
+@font-face {
+  font-family: PTSans-Bold;
+  src: url(../fonts/PTSans-Bold.ttf); }
 .clearfix::after {
   content: "";
   display: table;
@@ -43,7 +46,7 @@
       float: left;
       width: 29%; }
       .content-holder .header-wrap .header-left .img-wrap {
-        margin-top: -4px; }
+        margin-top: -8px; }
     .content-holder .header-wrap .header-right {
       float: right;
       width: 71%; }
@@ -205,7 +208,8 @@
     display: block;
     margin-top: 21px; }
     .content-holder .reviews-wrap .reviews-top {
-      width: 100%; }
+      width: 100%;
+      margin-top: 25px; }
       .content-holder .reviews-wrap .reviews-top .reviews-nav {
         float: left; }
         .content-holder .reviews-wrap .reviews-top .reviews-nav li {
@@ -273,13 +277,15 @@
             font-family: Arial;
             color: #333;
             line-height: 1.4;
-            text-align: justify; }
+            text-align: justify;
+            word-spacing: 0; }
 
 .footer-holder {
   width: 100%;
   max-width: 489px;
   display: block;
   margin: 0 auto;
+  margin-top: 3px;
   padding: 30px 20px 35px 20px;
   box-sizing: border-box;
   background: #f2f2f2; }
@@ -293,7 +299,6 @@
       box-sizing: border-box;
       margin: 0 auto;
       border-radius: 3px;
-      margin-top: 2px;
       border: 1px solid #a9a9a9; }
     .footer-holder .form-wrap form button#public {
       font-weight: bold;
@@ -302,14 +307,16 @@
       height: 45px;
       background: #fdd639;
       font-size: 16px;
-      font-family: Arial;
+      font-family: PTSans-Bold;
       color: #333;
       border: 0;
       border-radius: 25px;
       cursor: pointer;
       margin: 0 auto;
-      margin-top: 22px;
-      display: block; }
+      margin-top: 19px;
+      display: block;
+      padding-left: 1px;
+      box-sizing: border-box; }
 
 @media all and (max-width: 507px) {
   .content-holder {
