--- a/css/style.scss
+++ b/css/style.scss
@@ -319,8 +319,17 @@
     box-sizing: border-box;
     background: #f2f2f2;
     .form-wrap{
+        position: relative;
         width: 100%;
-        form{
+            .error{
+                position: absolute;
+                bottom: 48px;
+                left: 0;
+                color: red;
+                font-family: Arial;
+                font-size: 13px;
+                display: none;
+            }
             input#in{
                 width: 100%;
                 height: 66px;
@@ -349,9 +358,9 @@
                 padding-left: 1px;
                 box-sizing: border-box;
             }
-        }
     }
 }
+
 
 @media all and (max-width: 507px) {
     .content-holder{
